--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -512,7 +512,7 @@ ul.navbar-nav li.nav-item a.nav-link, ul.navbar-nav li.nav-item.active a.nav-lin
 }
 
 .top-header-area {
-  position: absolute;
+  position: relative;
   z-index: 999;
   width: 100%;
   padding: 25px 0;
