--- a/assets/css/loginstyle.css
+++ b/assets/css/loginstyle.css
@@ -1,3 +1,16 @@
+
+#background-video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +22,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: url(../img/BG.jpg);
+    /* background-image: url(../img/BG.jpg); */
 }
 .container {
     position: relative;
