--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2275,6 +2275,17 @@ a.video-play-btn {
 .influencer-bg-3 {
   background-image: url(../img/influencer/influencer-bg-3.jpg);
 }
+.carbon-bg-1 {
+  background-image: url(../img/carbon/1.jpg);
+}
+
+.carbon-bg-2 {
+  background-image: url(../img/carbon/2.jpg);
+}
+
+.carbon-bg-3 {
+  background-image: url(../img/carbon/3.jpg);
+}
 
 
 .team-bg {
